@@ -4,6 +4,7 @@
      - added sysinfo feature (GET)
      - added gzip, deflate encoding support (GET, PROPFIND, PROPPATCH, SEARCH, REPORT)
      - Web interface:
+         - added UNSELECTABLE_FOLDERS feature (GET)
          - fixed move/rename behavior for folders (POST)
          - added gzip content encoding support (GET)
          - added variable substitution for $HEADER, $LANGSWITCH, $SIGNATURE (GET)
